--- a/F401_I2C_Scanner/Debug/makefile
+++ b/F401_I2C_Scanner/Debug/makefile
@@ -61,8 +61,8 @@ all: main-build
 main-build: F401_I2C_Scanner.elf secondary-outputs
 
 # Tool invocations
-F401_I2C_Scanner.elf: $(OBJS) $(USER_OBJS) C:\Users\Javier.MORALES\STM32CubeIDE\workspace_1.6.1\F401_I2C_Scanner\STM32F401CCUX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "F401_I2C_Scanner.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\Javier.MORALES\STM32CubeIDE\workspace_1.6.1\F401_I2C_Scanner\STM32F401CCUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="F401_I2C_Scanner.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+F401_I2C_Scanner.elf: $(OBJS) $(USER_OBJS) D:\Users\Javi\GitHub\STM32_Other\F401_I2C_Scanner\STM32F401CCUX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "F401_I2C_Scanner.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\Users\Javi\GitHub\STM32_Other\F401_I2C_Scanner\STM32F401CCUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="F401_I2C_Scanner.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
